Port highctidh to Solaris 11.4 (sparcv9 and i86pc)
Initial Solaris 11.4 (sparcv9) support made possible thanks to the
generous availability of computing resources from the cfarm project:
https://portal.cfarm.net/

The 64-bit `sparcv9`/`sun4v` SPARC port was tested and developed using
`cfarm216`, an Oracle SPARC T8-1 machine with a SPARC M8 CPU.

This port works with both `clang` and `gcc`. Specifically it was tested
with the following versions:
- clang 13.0.1 on Solaris 11.4.68.164.2 (sparcv9, 64bit)
- gcc 13.2.0 on Solaris 11.4.68.164.2 (sparcv9, 64bit)
- gcc 13.2.0 on Solaris 11.4.68.164.2 (i86pc, 64bit, kernel-zone)
- clang 13.0.1 on Solaris 11.4.68.164.2 (i86pc, 64bit, kernel-zone)

It was additionally tested with gcc on Solaris 11.4.0.15.0 (i86pc, 64bit,
qemu).

```
$ uname -a
SunOS s11-sparc.cfarm 5.11 11.4.68.164.2 sun4v sparc sun4v logical-domain
```

```
$ isainfo -v
64-bit sparcv9 applications
        mme sparc5b vis3c sha3 rle fpcmpshl dictunpack ondiv onmul
        onaddsub sparc6 vamask pause_nsec xmont xmpmul mwait sparc5
        adi vis3b crc32c cbcond pause mont mpmul sha512 sha256 sha1
        md5 camellia des aes ima hpc vis3 fmaf asi_blk_init vis2 vis
        popc fsmuld div32 mul32
32-bit sparc applications
        mme sparc5b vis3c sha3 rle fpcmpshl dictunpack ondiv onmul
        onaddsub sparc6 pause_nsec xmont xmpmul mwait sparc5 vis3b
        crc32c cbcond pause mont mpmul sha512 sha256 sha1 md5
        camellia des aes ima hpc vis3 fmaf asi_blk_init vis2 vis
        popc v8plus fsmuld div32 mul32
```

The `i86pc` port was also tested using `qemu` booting a virtual machine
image of the Solaris OS as provided by
https://github.com/marketplace/actions/solaris-vm which has the
following system properties:
```
$ uname -a
SunOS solaris 5.11 11.4.0.15.0 i86pc i386 i86pc
```

```
$ isainfo -v
64-bit amd64 applications
        prfchw bmi1 f16c fma rdrand avx xsave pclmulqdq aes movbe
        sse4_2 sse4_1 ssse3 amd_lzcnt popcnt amd_sse4a tscp ahf cx1

--- a/.github/workflows/ubuntu-deb-clang-gcc-pytest.yml
+++ b/.github/workflows/ubuntu-deb-clang-gcc-pytest.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install Debian package
       run: sudo dpkg -i dist/python3-highctidh_*.deb
 
+    - name: List Debian package contents
+      run: dpkg -L python3-highctidh
+
     - name: Run pytest
       run: make pytest
 
