--- a/.github/workflows/solaris-test.yml
+++ b/.github/workflows/solaris-test.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Solaris gcc build
     env:
+      LANG: "C"
       LD: "/usr/bin/ld"
       CC: "gcc"
       MAKE: "/usr/bin/gmake"
@@ -23,7 +24,6 @@ jobs:
           isainfo -v
           pkgutil -U
           pkgutil -y -i gmake
-          pkgutil -y -i gcc
 
         run: |
           gmake
