--- a/src/Makefile
+++ b/src/Makefile
@@ -109,12 +109,16 @@ ifeq	($(PLATFORM),s390x)
 	endif
 endif
 
-ifeq	($(PLATFORM), $(filter $(PLATFORM), sparc sun4u sun4v sparc64))
-	CFLAGS+= $(BASE_CFLAGS) -m64 -D__sun -DHIGHCTIDH_PORTABLE
+ifeq	($(HOST_OS), $(filter $(HOST_OS), SunOS))
+ifeq	($(PLATFORM), $(filter $(PLATFORM), sparc sun4u sun4v sparc64 amd64))
+	CFLAGS+= $(BASE_CFLAGS) -m64 -D__sun
 	ifeq ($(CC),gcc)
 		CFLAGS+=-mcpu=native -mtune=native -D_REENTRANT
 	endif
 	LDFLAGS+= $(LDFLAGS)# -Wl,-Bsymbolic-functions
+ifeq	($(PLATFORM), $(filter $(PLATFORM), sparc sun4u sun4v sparc64))
+	CFLAGS+=-DHIGHCTIDH_PORTABLE
+endif
 endif
 
 ifeq	($(PLATFORM),unknown)
