also process uname

--- a/.github/workflows/solaris-test.yml
+++ b/.github/workflows/solaris-test.yml
@@ -22,6 +22,7 @@ jobs:
         envs: 'LD CC MAKE HIGHCTIDH_PORTABLE'
         usesh: true
         prepare: |
+          uname -a
           isainfo -v
           pkgutil -U
           pkgutil -y -i gmake
