do not treat warnings as errors for now

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ CC_MTUNE ?= $(CC_MARCH)
 
 SAVETMP:= -S -save-temps
 SEC_CFLAGS := -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2 -fstack-protector-strong
-BASE_CFLAGS := -fpie -fPIC -Wall -Wextra -pedantic -O2 -fwrapv -DGETRANDOM -Werror
+BASE_CFLAGS := -fpie -fPIC -Wall -Wextra -pedantic -O2 -fwrapv -DGETRANDOM
 BASE_CFLAGS+=-DPLATFORM=${PLATFORM} -DPLATFORM_SIZE=${PLATFORM_SIZE}
 BASE_CFLAGS+=$(if $(strip $(CC_MARCH)),-march=$(CC_MARCH) -mtune=$(CC_MTUNE),)
 #BASE_CFLAGS+=$(SEC_CFLAGS) #$(SAVETMP)
