disable -Wattributes for specific i86pc

--- a/src/Makefile
+++ b/src/Makefile
@@ -116,7 +116,7 @@ ifeq	($(PLATFORM), $(filter $(PLATFORM), sparc sun4u sun4v sparc64 i86pc i386))
 	CFLAGS+= $(BASE_CFLAGS) -m64 -D__sun
 	LDFLAGS+= $(LDFLAGS)
 ifeq	($(PLATFORM), $(filter $(PLATFORM), i86pc))
-	CFLAGS+=-D__i86pc__
+	CFLAGS+=-D__i86pc__ -Wno-attributes
 endif
 ifeq	($(PLATFORM), $(filter $(PLATFORM), sparc sun4u sun4v sparc64))
 	CFLAGS+=-DHIGHCTIDH_PORTABLE
