be more explicit

--- a/.github/workflows/solaris-asm-i86pc-test.yml
+++ b/.github/workflows/solaris-asm-i86pc-test.yml
@@ -29,6 +29,5 @@ jobs:
           pkgutil -y -i gmake
 
         run: |
-          gmake
-          gmake test-quick
-          gmake examples
+          HIGHCTIDH_PORTABLE=0 gmake
+          HIGHCTIDH_PORTABLE=0 gmake test-quick
