--- a/.github/workflows/solaris-asm-i86pc-golang-test.yml
+++ b/.github/workflows/solaris-asm-i86pc-golang-test.yml
@@ -26,6 +26,7 @@ jobs:
           isainfo -v
           pkgutil -U
           pkgutil -y -i gmake
+          pkg install --accept developer/golang
 
         run: |
           HIGHCTIDH_PORTABLE=0 gmake test-go
