go get required deps

--- a/.github/workflows/solaris-asm-i86pc-golang-test.yml
+++ b/.github/workflows/solaris-asm-i86pc-golang-test.yml
@@ -27,7 +27,8 @@ jobs:
           pkgutil -U
           pkgutil -y -i gmake
           pkg install --accept pkg://solaris/developer/golang
+          go get -u -v github.com/stretchr/testify
+          go get -u -v github.com/mattn/go-pointer
 
         run: |
-          cd src/ctidh512/ && go get -u -v && cd ../../
           HIGHCTIDH_PORTABLE=0 gmake test-go
