--- a/.github/workflows/solaris-asm-i86pc-golang-test.yml
+++ b/.github/workflows/solaris-asm-i86pc-golang-test.yml
@@ -27,6 +27,7 @@ jobs:
           pkgutil -U
           pkgutil -y -i gmake
           pkg install --accept pkg://solaris/developer/golang
+          pkg install --accept pkg://solaris/developer/versioning/git
           export GOPATH=$HOME/go
           go get -u -v github.com/stretchr/testify
           go get -u -v github.com/mattn/go-pointer
