--- a/.github/workflows/solaris-asm-i86pc-golang-test.yml
+++ b/.github/workflows/solaris-asm-i86pc-golang-test.yml
@@ -30,14 +30,13 @@ jobs:
           pkg install --accept pkg://solaris/developer/golang
           pkg install --accept pkg://solaris/developer/versioning/git
           export GOPATH=$HOME/go
-          go get -u -v github.com/stretchr/testify
-          go get -u -v github.com/mattn/go-pointer
 
         run: |
           export GOPATH=$HOME/go
           mkdir -p $HOME/go
           go get -u -v github.com/stretchr/testify
           go get -u -v github.com/mattn/go-pointer
+          cd /home/runner/work/highctidh/highctidh/src/ctidh511 && go get -u -v .
           cd /home/runner/work/highctidh/highctidh/src/ctidh511 && go test -v .
           cd /home/runner/work/highctidh/highctidh/src/ctidh512 && go test -v .
           cd /home/runner/work/highctidh/highctidh/src/ctidh1024 && go test -v .
