--- a/.github/workflows/netbsd-fiat-test.yml
+++ b/.github/workflows/netbsd-fiat-test.yml
@@ -10,7 +10,7 @@ jobs:
       LANG: "C"
       LD: "/usr/bin/ld"
       CC: "gcc"
-      MAKE: "/usr/bin/gmake"
+      MAKE: "gmake"
       HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
@@ -25,6 +25,8 @@ jobs:
           uname -a
           /usr/sbin/pkg_add gmake
           /usr/sbin/pkg_add gcc10
+          gcc -v
+          gmake -v
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
