--- a/.github/workflows/omnios-fiat-test.yml
+++ b/.github/workflows/omnios-fiat-test.yml
@@ -1,15 +1,15 @@
-name: Omnios fiat build with gcc
+name: Omnios fiat build with clang
 
 on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Omnios gcc build of fiat backend
+    name: Omnios clang build of fiat backend
     env:
       LANG: "C"
       LD: "/usr/bin/ld"
-      CC: "gcc"
+      CC: "clang"
       MAKE: "gmake"
       HIGHCTIDH_PORTABLE: "1"
     steps:
@@ -25,8 +25,12 @@ jobs:
           uname -a
           psrinfo -vp
           cat /etc/release
-          pkg install gmake
-          pkg install gcc
+          pkg install developer/build/gnu-make
+          pkg install ooce/developer/clang-18
+          pkg install gcc-dev
+          clang -v
+          gcc -v
+          gmake -v
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
