temp disable successful workflows to focus on fixing remainders

--- a/.github/workflows/omnios-fiat-test.yml
+++ b/.github/workflows/omnios-fiat-test.yml
@@ -25,9 +25,9 @@ jobs:
           uname -a
           psrinfo -vp
           cat /etc/release
-          pkg list 'developer/gcc*' '*/clang*'
           pkg install developer/build/gnu-make
-          pkg install ooce/developer/clang-18
+          pkg install developer/build/gnu-make
+          pkg install developer/clang-18
           clang -v
           gmake -v
 
