--- a/src/Makefile
+++ b/src/Makefile
@@ -3,10 +3,6 @@
 .PHONY: clean
 HOST_PLATFORM := $(shell uname -m)
 HOST_OS := $(shell uname -s)
-_D := __$(HOST_OS)__
-ifndef _D
-CFLAGS :=-D__$(HOST_OS)__
-endif
 
 ### override these for cross-building:
 PLATFORM ?= $(shell uname -m)
@@ -34,7 +30,9 @@ BASE_CFLAGS := -fpie -fPIC -Wall -Wextra -pedantic -O2 -fwrapv -DGETRANDOM -Werr
 BASE_CFLAGS+=-DPLATFORM=${PLATFORM} -DPLATFORM_SIZE=${PLATFORM_SIZE}
 BASE_CFLAGS+=$(SEC_CFLAGS)
 BASE_CFLAGS+=$(if $(strip $(CC_MARCH)),-march=$(CC_MARCH) -mtune=$(CC_MTUNE),)
+ifeq    ($(HOST_OS), $(filter $(HOST_OS), OpenBSD, DragonFly))
 BASE_CFLAGS+=-D__$(HOST_OS)__
+endif
 LDFLAGS := -s
 ifeq ($(HOST_OS),Linux)
 LDFLAGS+=-Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now
