--- a/.github/workflows/omnios-fiat-test.yml
+++ b/.github/workflows/omnios-fiat-test.yml
@@ -1,15 +1,15 @@
-name: Omnios fiat build with clang
+name: Omnios fiat build with gcc
 
 on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Omnios clang build of fiat backend
+    name: Omnios gcc build of fiat backend
     env:
       LANG: "C"
       LD: "/usr/bin/ld"
-      CC: "cc"
+      CC: "gcc"
       MAKE: "gmake"
       HIGHCTIDH_PORTABLE: "1"
     steps:
@@ -26,8 +26,9 @@ jobs:
           psrinfo -vp
           cat /etc/release
           pkg install developer/build/gnu-make
+          pkg install developer/gcc13
           gmake -v
-          cc -v
+          gcc -v
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
