--- a/.github/workflows/dragonflybsd-fiat-test.yml
+++ b/.github/workflows/dragonflybsd-fiat-test.yml
@@ -25,6 +25,7 @@ jobs:
           uname -a
           pkg install -y gmake
           pkg install -y gcc
+          pkg search clang
           gcc -v
           gmake -v
 
